--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "casper",
-    "description": "A clean, minimal default theme for the Ghost publishing platform",
+    "name": "casper-locales",
+    "description": "A clean, minimal default theme for the Ghost publishing platform, with locales",
     "demo": "https://demo.ghost.io",
     "version": "3.0.12",
     "engines": {
